# Qwencode

./: .env.example  .gitignore  README.md  pyproject.toml
.tokenmaxxing/: plan.md
benchmarks/mini_swe/calculator/: ISSUE.md  expected_patch.diff  metadata.json
benchmarks/mini_swe/dummy_repo_10/: ISSUE.md  expected_patch.diff  metadata.json
benchmarks/mini_swe/dummy_repo_3/: ISSUE.md  expected_patch.diff  metadata.json
benchmarks/mini_swe/dummy_repo_4/: ISSUE.md  expected_patch.diff  metadata.json
benchmarks/mini_swe/dummy_repo_5/: ISSUE.md  expected_patch.diff  metadata.json
benchmarks/mini_swe/dummy_repo_6/: ISSUE.md  expected_patch.diff  metadata.json
benchmarks/mini_swe/dummy_repo_7/: ISSUE.md  expected_patch.diff  metadata.json
benchmarks/mini_swe/dummy_repo_8/: ISSUE.md  expected_patch.diff  metadata.json
benchmarks/mini_swe/dummy_repo_9/: ISSUE.md  expected_patch.diff  metadata.json
benchmarks/mini_swe/string_utils/: ISSUE.md  expected_patch.diff  (+1 more)
configs/: eval_adversarial.yaml  eval_adversarial_pass1.yaml  eval_algorithms.yaml  eval_baseline.yaml  eval_baseline_pass1.yaml  eval_hard.yaml  eval_hard_pass1.yaml  eval_repo_repair.yaml  model.yaml  training_lora.yaml
data/: dataset_card.md
data/processed/: eval_adversarial.jsonl  eval_hard.jsonl  sample_algorithmic.jsonl
notebooks/: train_qlora.ipynb
reports/: ablation_algorithmic.md  ablation_repo_repair.md  baseline_results.md  error_analysis.md  final_report.md  practical_results.md  repo_repair_results.md
src/code_model_lab/: __init__.py
tests/: test_sandbox.py  test_schemas.py
(+47 files in other folders)
